Split files: Added database.h and .cpp files

--- a/week3/Assignment_3_1_1/Program5/CMakeLists.txt
+++ b/week3/Assignment_3_1_1/Program5/CMakeLists.txt
@@ -8,4 +8,4 @@ add_executable(${PROJECT_NAME} main.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC banking_functions account_functions)
+target_link_libraries(${PROJECT_NAME} PUBLIC banking_functions account_functions database)
