--- a/week3/Assignment_3_1_1/Program5/src/CMakeLists.txt
+++ b/week3/Assignment_3_1_1/Program5/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(banking_functions STATIC banking_functions.cpp)
 add_library(account_functions STATIC account_functions.cpp)
+add_library(database STATIC database.cpp)
 
